[package]
name = "traianus"
version = "0.0.2"
authors = ["Matthijs Kok"]
edition = "2021"
rust-version = "1.61.0"
description = "Converts Roman numerals to Arabic numerals and vice versa."
readme = "README.md"
repository = "https://github.com/MatthijsKok/traianus"
license = "MIT OR Apache-2.0"
keywords = ["numerals", "roman", "arabic", "conversion", "formatting"]

[dependencies]
thiserror = "1.0"
